--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <html>
+    <head>
+        <title>Hangman</title>
+        <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+    </head>
     <body>
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <h1 id="word"></h1>
         <div id="alphabet" ></div>
+        <script src="js/event_dispatcher.js"></script>
+        <script src="js/model.js"></script>
         <script src="js/view.js"></script>
+        <script src="js/controller.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
