--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <h1 id="word"></h1>
         <div id="replay_button"></div>
+        <h1 id="guesses_remaining"></h1>
         <div id="alphabet" ></div>
         <script src="js/event_dispatcher.js"></script>
         <script src="js/model.js"></script>
