Added definition to page

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <h1 id="word"></h1>
-        <div id="replay_button_div"></div>
-        <h1 id="guesses_remaining"></h1>
-        <h1 id="letter_placeholders"></h1>
-        <div id="alphabet" ></div>
+        <h1 id="victory_message"></h1>
+        <div id="game_container">
+            <h2 id="word"></h2>
+            <div id="replay_button_div"></div>
+            <h1 id="guesses_remaining"></h1>
+            <h1 id="letter_placeholders"></h1>
+            <p id="definition"></p>
+            <div id="alphabet" ></div>
+        </div>
         <script src="js/event_dispatcher.js"></script>
         <script src="js/model.js"></script>
         <script src="js/view.js"></script>
