--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <h1 id="victory_message"></h1>
         <div id="game_container">
             <h2 id="word"></h2>
             <div id="replay_button_div"></div>
-            <h1 id="guesses_remaining"></h1>
+            <h3 id="guesses_remaining"></h3>
+            <div id="score_play_again_container">
+                <h3 id="score"></h3>
+            </div>
             <h1 id="letter_placeholders"></h1>
             <p id="definition"></p>
             <div id="alphabet" ></div>
