--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <canvas id="canvas"></canvas>
+        <!-- <canvas id="canvas"></canvas> -->
         <div id="game_container">
             <h2 id="word"></h2>
             <div id="replay_button_div"></div>
@@ -19,6 +19,10 @@
             <p id="definition"></p>
             <div id="alphabet" ></div>
         </div>
+        <button id="logout_button" class="btn btn-danger">Logout</button>
+        <script src="js/auth/amazon-cognito-identity.min.js"></script>
+        <script src="js/auth/config.js"></script>
+        <script src="js/auth/cognito-auth.js"></script>
         <script src="js/event_dispatcher.js"></script>
         <script src="js/model.js"></script>
         <script src="js/view.js"></script>
