--- a/register.html
+++ b/register.html
@@ -7,15 +7,14 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-        <div id="sign-in-container" class="container">
+        <div id="signin-container" class="container">
             <section class="form-wrap">
                 <h1>Register</h1>
                 <form id="registrationForm">
-                  <input type="email" id="emailInputRegister" placeholder="Email" pattern=".*">
-                  <input type="password" id="passwordInputRegister" placeholder="Password" pattern=".*" >
-                  <input type="password" id="password2InputRegister" placeholder="Confirm Password" pattern=".*" >
-    
-                  <input type="submit" value="Let's Ryde">
+                  <input type="email" id="emailInputRegister" class="form-control auth-input" placeholder="Email" pattern=".*">
+                  <input type="password" id="passwordInputRegister" class="form-control auth-input" placeholder="Password" pattern=".*" >
+                  <input type="password" id="password2InputRegister" class="form-control auth-input" placeholder="Confirm Password" pattern=".*" >
+                  <input type="submit" class="btn btn-info" value="Register">
                 </form>
             </section>
         </div>
