--- a/index.html
+++ b/index.html
@@ -1,32 +1,27 @@
 <html>
     <head>
-        <title>Hangman</title>
+        <title>Sign In</title>
         <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <!-- <canvas id="canvas"></canvas> -->
-        <div id="game_container">
-            <h2 id="word"></h2>
-            <div id="replay_button_div"></div>
-            <h3 id="guesses_remaining"></h3>
-            <div id="score_play_again_container">
-                <h3 id="score"></h3>
+    </head>
+    <body>
+        <div id="signin-container" class="container">
+            <div>
+                <form id="signinForm">
+                    <h2>Sign In</h2>
+                    <input type="email" id="emailInputSignin" class="form-control auth-input" placeholder="Email" required>
+                    <input type="password" id="passwordInputSignin" class="form-control auth-input" placeholder="Password" pattern=".*" required>
+                    <div>
+                        <input type="submit" id="signin-submit" class="btn btn-info" value="Log in">
+                        <a href="register.html" class="btn btn-info">Sign Up</a>
+                    </div>
+                </form>
             </div>
-            <h1 id="letter_placeholders"></h1>
-            <p id="definition"></p>
-            <div id="alphabet" ></div>
         </div>
-        <button id="logout_button" class="btn btn-danger">Logout</button>
+        <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
         <script src="js/auth/amazon-cognito-identity.min.js"></script>
         <script src="js/auth/config.js"></script>
         <script src="js/auth/cognito-auth.js"></script>
-        <script src="js/event_dispatcher.js"></script>
-        <script src="js/model.js"></script>
-        <script src="js/view.js"></script>
-        <script src="js/controller.js"></script>
-        <script src="js/app.js"></script>
     </body>
 </html>
