--- a/main.html
+++ b/main.html
@@ -30,10 +30,8 @@
         <div>
             <div id="leaderboard_container" class="my_container">
                 <h1>Leaderboard</h1>
-                <ol class="list-group">
-                    <li class="list-group-item">Coffee</li>
-                    <li class="list-group-item">Tea</li>
-                    <li class="list-group-item">Milk</li>
+                <ol id="leaderboard_list" class="list-group">
+                    
                 </ol>
             </div>
         </div>
