--- a/index.html
+++ b/index.html
@@ -6,19 +6,29 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-        <div id="signin-container" class="container">
-            <div>
-                <form id="signinForm">
-                    <h2>Sign In</h2>
-                    <input type="email" id="emailInputSignin" class="form-control auth-input" placeholder="Email" required>
-                    <input type="password" id="passwordInputSignin" class="form-control auth-input" placeholder="Password" pattern=".*" required>
-                    <div>
-                        <input type="submit" id="signin-submit" class="btn btn-info" value="Log in">
-                        <a href="register.html" class="btn btn-info">Sign Up</a>
-                    </div>
-                </form>
+        <div>
+            <div class="fluff_container">
+                <div>
+                    <h1>Welcome to Hangman</h1>
+                    <img src="img/Hangman.png" />
+                </div>
+            </div>
+            <div class="auth_container">
+                <div id="signin-form-container">
+                    <form id="signinForm">
+                        <h2>Sign In</h2>
+                        <input type="email" id="emailInputSignin" class="form-control auth-input" placeholder="Email" required>
+                        <input type="password" id="passwordInputSignin" class="form-control auth-input" placeholder="Password" pattern=".*" required>
+                        <h4 id="signin_error_message" class="error_message text-danger">Incorrect Username or Password</h4>
+                        <div>
+                            <input type="submit" id="signin-submit" class="btn btn-info" value="Log in">
+                            <a href="register.html" class="btn btn-info">Sign Up</a>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
+        <script src="js/view/signin_view.js"></script>
         <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
         <script src="js/auth/amazon-cognito-identity.min.js"></script>
         <script src="js/auth/config.js"></script>
