Modify auth pages design

--- a/verify.html
+++ b/verify.html
@@ -5,12 +5,10 @@
     </head>
     <body>
         <div class="fluff_container">
-            <div>
-                <h1>Welcome to Hangman</h1>
-            </div>
+            <img src="img/Hangman.png" />
         </div>
         <div class="auth_container">
-            <div id="signin-form-container">
+            <div class="signin-form-container">
                 <section class="form-wrap">
                     <h1>Verify Email</h1>
                     <form id="verifyForm">
