--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
         <div>
             <div class="fluff_container">
                 <div>
-                    <h1>Welcome to Hangman</h1>
                     <img src="img/Hangman.png" />
                 </div>
             </div>
             <div class="auth_container">
-                <div id="signin-form-container">
+                <div class="signin-form-container">
                     <form id="signinForm">
                         <h2>Sign In</h2>
                         <input type="email" id="emailInputSignin" class="form-control auth-input" placeholder="Email" required>
