--- a/register.html
+++ b/register.html
@@ -8,12 +8,10 @@
     </head>
     <body>
         <div class="fluff_container">
-            <div>
-                <h1>Welcome to Hangman</h1>
-            </div>
+            <img src="img/Hangman.png" />
         </div>
         <div class="auth_container">
-            <div id="signin-form-container">
+            <div class="signin-form-container">
                 <section class="form-wrap">
                     <h2>Register</h2>
                     <form id="registrationForm">
