Configure mobile view for auth pages

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <body>
         <div>
             <div class="fluff_container">
-                <div>
+                <div id="desktop_banner">
                     <img src="img/Hangman.png" />
                 </div>
             </div>
             <div class="auth_container">
                 <div class="signin-form-container">
+                    <div id="mobile_banner">
+                        <img src="img/Hangman.png" />
+                    </div>
                     <form id="signinForm">
                         <h2>Sign In</h2>
                         <input type="email" id="emailInputSignin" class="form-control auth-input" placeholder="Email" required>
