Show modal in register view

--- a/register.html
+++ b/register.html
@@ -12,15 +12,18 @@
         </div>
         <div class="auth_container">
             <div class="signin-form-container">
+                <div id="mobile_banner">
+                    <img src="img/Hangman.png" />
+                </div>
                 <section class="form-wrap">
                     <h2>Register</h2>
                     <form id="registrationForm">
                     <input type="email" id="emailInputRegister" class="form-control auth-input" placeholder="Email" pattern=".*">
                     <input type="password" id="passwordInputRegister" class="form-control auth-input" placeholder="Password" pattern=".*" >
                     <input type="password" id="password2InputRegister" class="form-control auth-input" placeholder="Confirm Password" pattern=".*" >
-                    <input type="submit" class="btn btn-info" value="Register">
                     <h4 id="password_error_message" class="error_message text-danger">Passwords do not match</h4>
-                    <h4 id="user_exists_error_message" class="error_message text-danger">User Already Exists</h4>
+                    <h4 id="user_error_message" class="error_message text-danger">Error Creating User</h4>
+                    <input type="submit" class="btn btn-info" value="Register">
                     </form>
                 </section>
             </div>
