--- a/verify.html
+++ b/verify.html
@@ -4,11 +4,21 @@
             <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
+        <div id="modal" class="modal">
+            <div class="modal-content">
+                <h3 id="victory_message">Victory!</h3>
+                <button id="replay_button" class="btn btn-success">Play Again</button>
+                <button id="save_score_button" class="btn btn-success">Save Score</button>
+            </div>
+        </div>
         <div class="fluff_container">
             <img src="img/Hangman.png" />
         </div>
         <div class="auth_container">
             <div class="signin-form-container">
+                <div id="mobile_banner">
+                    <img src="img/Hangman.png" />
+                </div>
                 <section class="form-wrap">
                     <h1>Verify Email</h1>
                     <form id="verifyForm">
