Begin separating auth responsibilies into separate js files

--- a/main.html
+++ b/main.html
@@ -34,6 +34,7 @@
                     
                 </ol>
             </div>
+            <button id="test_button">TEST</button>
         </div>
 
         <script src="js/auth/amazon-cognito-identity.min.js"></script>
