--- a/main.html
+++ b/main.html
@@ -15,6 +15,7 @@
             </div>
         </div>
         <div id="game_container">
+            <canvas id="canvas"></canvas>
             <h2 id="word"></h2>
             <h3 id="guesses_remaining"></h3>
             <div id="score_play_again_container">
@@ -34,7 +35,7 @@
                     
                 </ol>
             </div>
-            <button id="test_button">TEST</button>
+
         </div>
 
         <script src="js/auth/amazon-cognito-identity.min.js"></script>
