display modal register

--- a/register.html
+++ b/register.html
@@ -8,9 +8,8 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <div id="modal" class="modal">
             <div class="modal-content">
-                <h3 id="victory_message">Victory!</h3>
-                <button id="replay_button" class="btn btn-success">Play Again</button>
-                <button id="save_score_button" class="btn btn-success">Save Score</button>
+                <h3 id="victory_message">You will receive an email with your verifcation code shortly</h3>
+                <button id="ok_button" class="btn btn-success">OK</button>
             </div>
         </div>
         <div class="fluff_container">
