--- a/verify.html
+++ b/verify.html
@@ -6,9 +6,9 @@
     <body>
         <div id="modal" class="modal">
             <div class="modal-content">
-                <h3 id="victory_message">Victory!</h3>
-                <button id="replay_button" class="btn btn-success">Play Again</button>
-                <button id="save_score_button" class="btn btn-success">Save Score</button>
+                <h3>Account Verified!</h3>
+                <h4>You can now sign in with these credentials</h4>
+                <button id="ok_button" class="btn btn-success">OK</button>
             </div>
         </div>
         <div class="fluff_container">
@@ -25,9 +25,10 @@
                     <input type="email" id="emailInputVerify" class="form-control auth-input" placeholder="Email" required>
                     <input type="text" id="codeInputVerify" class="form-control auth-input" placeholder="Verification Code" pattern=".*" required>
                     <h4 id="verify_error_message" class="error_message text-danger">User Already Verified</h4>
-                    <input id="verify_button" type="submit" class="btn btn-info" value="Verify">
                     </form>
                 </section>
+                <button id="verify_button" type="submit" class="btn btn-info">Verify</button>
+
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
