Finish refactoring auth

--- a/register.html
+++ b/register.html
@@ -29,9 +29,10 @@
                     <h4 id="password_error_message" class="error_message text-danger">Passwords do not match</h4>
                     <h4 id="user_error_message" class="error_message text-danger">Error Creating User</h4>
                 </form>
-                <button id="register_button" class="btn btn-info">Register</button>
                 </section>
-
+                <div>
+                    <button id="register_button" class="btn btn-info">Register</button>
+                </div>
             </div>
         </div>
         <script src="js/event_dispatcher.js"></script>
