--- a/index.html
+++ b/index.html
@@ -23,17 +23,22 @@
                         <input type="password" id="passwordInputSignin" class="form-control auth-input" placeholder="Password" pattern=".*" required>
                         <h4 id="signin_error_message" class="error_message text-danger">Incorrect Username or Password</h4>
                         <div>
-                            <input type="submit" id="signin-submit" class="btn btn-info" value="Log in">
-                            <a href="register.html" class="btn btn-info">Sign Up</a>
                         </div>
                     </form>
+                    <div>
+
+                    </div>
+                    <button type="submit" id="signin_button" class="btn btn-info">Log in</button>
+                    <a href="register.html" class="btn btn-info">Sign Up</a>
                 </div>
             </div>
         </div>
-        <script src="js/view/signin_view.js"></script>
-        <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
-        <script src="js/auth/amazon-cognito-identity.min.js"></script>
+        <script src="js/event_dispatcher.js"></script>
         <script src="js/auth/config.js"></script>
-        <script src="js/auth/cognito-auth.js"></script>
+        <script src="js/model/signin_model.js"></script>
+        <script src="js/view/signin_view.js"></script>
+        <script src="js/controller/signin_controller.js"></script>
+        <script src="js/register_app.js"></script>
+        <script src="js/auth/amazon-cognito-identity.min.js"></script>
     </body>
 </html>
