Basic error messages

--- a/verify.html
+++ b/verify.html
@@ -12,7 +12,9 @@
             </div>
         </div>
         <div class="fluff_container">
-            <img src="img/Hangman.png" />
+            <div id="desktop_banner">
+                <img src="img/Hangman.png" />
+            </div>
         </div>
         <div class="auth_container">
             <div class="signin-form-container">
@@ -22,9 +24,10 @@
                 <section class="form-wrap">
                     <h1>Verify Email</h1>
                     <form id="verifyForm">
-                    <input type="email" id="emailInputVerify" class="form-control auth-input" placeholder="Email" required>
-                    <input type="text" id="codeInputVerify" class="form-control auth-input" placeholder="Verification Code" pattern=".*" required>
-                    <h4 id="verify_error_message" class="error_message text-danger">User Already Verified</h4>
+                        <input type="email" id="emailInputVerify" class="form-control auth-input" placeholder="Email" required>
+                        <input type="text" id="codeInputVerify" class="form-control auth-input" placeholder="Verification Code" pattern=".*" required>
+                        <h4 id="verify_error_message" class="error_message text-danger">User Already Verified</h4>
+                        <h4 id="error_message" class="error_message text-danger"></h4>
                     </form>
                 </section>
                 <button id="verify_button" type="submit" class="btn btn-info">Verify</button>
