--- a/register.html
+++ b/register.html
@@ -8,12 +8,15 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <div id="modal" class="modal">
             <div class="modal-content">
-                <h3 id="victory_message">You will receive an email with your verifcation code shortly</h3>
+                <h4 id="victory_message">You will receive an email with your verifcation code shortly</h4>
+                <h4 id="victory_message">Please enter this code on the following page to verify your account</h4>
                 <button id="ok_button" class="btn btn-success">OK</button>
             </div>
         </div>
         <div class="fluff_container">
-            <img src="img/Hangman.png" />
+            <div id="desktop_banner">
+                <img src="img/Hangman.png" />
+            </div>
         </div>
         <div class="auth_container">
             <div class="signin-form-container">
@@ -23,11 +26,10 @@
                 <section class="form-wrap">
                     <h2>Register</h2>
                     <form id="registrationForm">
-                    <input type="email" id="emailInputRegister" class="form-control auth-input" placeholder="Email" pattern=".*">
-                    <input type="password" id="passwordInputRegister" class="form-control auth-input" placeholder="Password" pattern=".*" >
-                    <input type="password" id="password2InputRegister" class="form-control auth-input" placeholder="Confirm Password" pattern=".*" >
-                    <h4 id="password_error_message" class="error_message text-danger">Passwords do not match</h4>
-                    <h4 id="user_error_message" class="error_message text-danger">Error Creating User</h4>
+                        <input type="email" id="emailInputRegister" class="form-control auth-input" placeholder="Email" pattern=".*">
+                        <input type="password" id="passwordInputRegister" class="form-control auth-input" placeholder="Password" pattern=".*" >
+                        <input type="password" id="password2InputRegister" class="form-control auth-input" placeholder="Confirm Password" pattern=".*" >
+                        <h4 id="error_message" class="error_message text-danger"></h4>
                 </form>
                 </section>
                 <div>
