Format hangman animations

--- a/main.html
+++ b/main.html
@@ -15,9 +15,9 @@
             </div>
         </div>
         <div id="game_container">
-            <canvas id="canvas"></canvas>
             <h2 id="word"></h2>
             <h3 id="guesses_remaining"></h3>
+            <canvas id="canvas"></canvas>
             <div id="score_play_again_container">
                 <h3 id="score"></h3>
             </div>
@@ -25,19 +25,16 @@
             <p id="definition"></p>
             <div id="alphabet" ></div>
             <div id="logout_button_div">
-                <button id="logout_button" class="btn btn-danger">Logout</button>
+                <button id="logout_button" class="btn btn-success">Logout</button>
             </div>
         </div>
         <div>
             <div id="leaderboard_container" class="my_container">
                 <h1>Leaderboard</h1>
                 <ol id="leaderboard_list" class="list-group">
-                    
                 </ol>
             </div>
-
         </div>
-
         <script src="js/auth/amazon-cognito-identity.min.js"></script>
         <script src="js/auth/config.js"></script>
         <script src="js/auth/cognito-auth.js"></script>
