Position leaderboard and game

--- a/main.html
+++ b/main.html
@@ -14,22 +14,22 @@
                 <button id="save_score_button" class="btn btn-success">Save Score</button>
             </div>
         </div>
-        <div id="game_container">
-            <h2 id="word"></h2>
-            <h3 id="guesses_remaining"></h3>
-            <canvas id="canvas"></canvas>
-            <div id="score_play_again_container">
-                <h3 id="score"></h3>
+        <div id="app_container">
+            <div id="game_container">
+                <h2 id="word"></h2>
+                <h3 id="guesses_remaining"></h3>
+                <canvas id="canvas"></canvas>
+                <div id="score_play_again_container">
+                    <h3 id="score"></h3>
+                </div>
+                <h1 id="letter_placeholders"></h1>
+                <p id="definition"></p>
+                <div id="alphabet" ></div>
+                <div id="logout_button_div">
+                    <button id="logout_button" class="btn btn-success">Logout</button>
+                </div>
             </div>
-            <h1 id="letter_placeholders"></h1>
-            <p id="definition"></p>
-            <div id="alphabet" ></div>
-            <div id="logout_button_div">
-                <button id="logout_button" class="btn btn-success">Logout</button>
-            </div>
-        </div>
-        <div>
-            <div id="leaderboard_container" class="my_container">
+            <div id="leaderboard_container">
                 <h1>Leaderboard</h1>
                 <ol id="leaderboard_list" class="list-group">
                 </ol>
