put messages in separate strings file

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 </div>
             </div>
         </div>
+        <script src="js/strings.js"></script>
         <script src="js/event_dispatcher.js"></script>
         <script src="js/auth/config.js"></script>
         <script src="js/model/signin_model.js"></script>
