--- a/register.html
+++ b/register.html
@@ -37,6 +37,7 @@
                 </div>
             </div>
         </div>
+        <script src="js/strings.js"></script>
         <script src="js/event_dispatcher.js"></script>
         <script src="js/auth/config.js"></script>
         <script src="js/model/register_model.js"></script>
