--- a/signin.html
+++ b/signin.html
@@ -17,6 +17,7 @@
                 </form>
             </section>
         </div>
+        <script src="js/strings.js"></script>
         <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
         <script src="js/auth/amazon-cognito-identity.min.js"></script>
         <script src="js/auth/config.js"></script>
