--- a/main.html
+++ b/main.html
@@ -35,6 +35,7 @@
                 </ol>
             </div>
         </div>
+        <script src="js/strings.js"></script>
         <script src="js/auth/amazon-cognito-identity.min.js"></script>
         <script src="js/auth/config.js"></script>
         <script src="js/auth/cognito-auth.js"></script>
