--- a/verify.html
+++ b/verify.html
@@ -33,6 +33,7 @@
                 </section>
             </div>
         </div>
+        <script src="js/strings.js"></script>
         <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
         <script src="js/event_dispatcher.js"></script>
         <script src="js/auth/config.js"></script>
