Add Icon and Comments

--- a/register.html
+++ b/register.html
@@ -4,11 +4,12 @@
         <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
     </head>
     <body>
+        
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <div id="modal" class="modal">
             <div class="modal-content">
-                <h4 id="victory_message">You will receive an email with your verifcation code shortly</h4>
+                <h4 id="victory_message">An email containing your verification code will be sent to this email address shortly</h4>
                 <h4 id="victory_message">Please enter this code on the following page to verify your account</h4>
                 <button id="ok_button" class="btn btn-success">OK</button>
             </div>
