Inform password requirements

--- a/register.html
+++ b/register.html
@@ -34,6 +34,8 @@
                         <button id="register_button" class="btn btn-info">Register</button>
                 </form>
                 </section>
+                <p>Paswords must contain at least 8 characters, and at least one uppercase, one lowercase, one digit, and one special character</p>
+
                 <div>
                 </div>
             </div>
