--- a/register.html
+++ b/register.html
@@ -34,7 +34,7 @@
                         <button id="register_button" class="btn btn-info">Register</button>
                 </form>
                 </section>
-                <p>Paswords must contain at least 8 characters, and at least one uppercase, one lowercase, one digit, and one special character</p>
+                <p>Paswords must contain at least 8 characters, with at least one uppercase, one lowercase, one digit, and one special character</p>
 
                 <div>
                 </div>
